# first-principles-code

./: .gitignore  CLAUDE.md  CONTRIBUTOR.md  LICENSE  README.md  SPEC.md  gui.py  main.py  pyproject.toml
.github/: make_social_preview.py
.github/workflows/: tests.yml
tests/: test_beam.py  test_console.py  test_dynamics.py  test_gear_electrical_mechatronics.py  test_modal_controls.py  test_statics_material.py  test_thermo_fluids.py  test_utility.py
