# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Evan Gress

[project]
name = "first-principles-code"
version = "0.1.0"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pint>=0.25.3",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

# pytest configuration: where to find tests and how to report.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
# Put the project root on sys.path so tests can `import library` / `import gui`
# without installing the project as a package.
pythonpath = ["."]
